Fixed bug #43069 (SoapClient causes 505 HTTP Version not supported error message)